// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Blue Submit Button 1`] = `
<button
  className="btnBlue"
  disabled={false}
  onClick={undefined}
  type="submit"
>
  Submit
</button>
`;

exports[`Blue Submit Button 2`] = `
<button
  className="btnBlue"
  disabled={false}
  onClick={undefined}
  type="submit"
>
  Submit
</button>
`;

exports[`Blue Submit Button 3`] = `
<input
  className="btnDark"
  disabled={false}
  onClick={undefined}
  type="reset"
  value="Reset"
/>
`;

exports[`Dark Reset Input 1`] = `
<input
  className="btnDark"
  disabled={false}
  onClick={undefined}
  type="reset"
  value="Reset"
/>
`;

exports[`Default Listen Button 1`] = `
<button
  className="btnWhite"
  disabled={false}
  onClick={undefined}
  type="button"
>
  Listen
</button>
`;

exports[`Default Listen Button 2`] = `
<button
  className="btnWhite"
  disabled={false}
  onClick={undefined}
  type="button"
>
  Listen
</button>
`;

exports[`Info & Knobs 1`] = `
<div>
  <div
    style={Object {}}
  >
    <button
      className="btnWhite"
      disabled={false}
      href={undefined}
      onClick={undefined}
      type="button"
    >
      Listen
    </button>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "marginBottom": 0,
          }
        }
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
            }
          }
        >
          Basic button UI element.
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Story Source
        </h1>
        <pre
          className="css-glamorous-pre--10jsrye"
        >
          <div>
            <div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  Button
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 33,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  Listen
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;/
                  Button
                  &gt;
                </span>
              </div>
            </div>
          </div>
          <button
            className="css-glamorous-button--jq496q"
            onClick={[Function]}
          >
            <div
              className="css-glamorous-div--ngxet1"
            >
              <div
                style={
                  Object {
                    "marginBottom": 6,
                  }
                }
              >
                Copied!
              </div>
              <div>
                Copy
              </div>
            </div>
          </button>
        </pre>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            Button
            " Component
          </h2>
          <table
            className="css-glamorous-table--3qhq7f"
          >
            <thead>
              <tr>
                <th
                  className="css-glamorous-th--1gvy3it"
                >
                  property
                </th>
                <th
                  className="css-glamorous-th--1gvy3it"
                >
                  propType
                </th>
                <th
                  className="css-glamorous-th--1gvy3it"
                >
                  required
                </th>
                <th
                  className="css-glamorous-th--1gvy3it"
                >
                  default
                </th>
                <th
                  className="css-glamorous-th--1gvy3it"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  children
                </td>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  <span />
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  -
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    null
                  </span>
                </td>
                <td
                  className="css-glamorous-td--42r361"
                />
              </tr>
              <tr>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  className
                </td>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  <span />
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  -
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    null
                  </span>
                </td>
                <td
                  className="css-glamorous-td--42r361"
                />
              </tr>
              <tr>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  color
                </td>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  <span />
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  -
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    white
                  </span>
                </td>
                <td
                  className="css-glamorous-td--42r361"
                />
              </tr>
              <tr>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  component
                </td>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  <span />
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  -
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    button
                  </span>
                </td>
                <td
                  className="css-glamorous-td--42r361"
                />
              </tr>
              <tr>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  disabled
                </td>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  <span />
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  -
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  className="css-glamorous-td--42r361"
                />
              </tr>
              <tr>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  small
                </td>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  <span />
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  -
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  <span
                    style={
                      Object {
                        "color": "#a11",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  className="css-glamorous-td--42r361"
                />
              </tr>
              <tr>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  type
                </td>
                <td
                  className="css-glamorous-td--58bwg8"
                >
                  <span />
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  -
                </td>
                <td
                  className="css-glamorous-td--42r361"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    button
                  </span>
                </td>
                <td
                  className="css-glamorous-td--42r361"
                />
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Orange Donate Button 1`] = `
<a
  className="btnOrange"
  href="/donate"
  onClick={undefined}
  role="button"
>
  Donate
</a>
`;

exports[`Orange Donate Link 1`] = `
<a
  className="btnOrange"
  href="/donate"
  onClick={undefined}
  role="button"
>
  Donate
</a>
`;
